fix overflow of pre element sin firefox

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -207,7 +207,7 @@ main,
 
 article {
   width: 100%;
-  overflow-x: scroll;
+  min-width: 0;
 
   @include tablet-landscape {
     flex: 1 1 auto;
